--- a/esp106-finalproject.Rmd
+++ b/esp106-finalproject.Rmd
@@ -5,55 +5,169 @@ output: pdf_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(terra)
+path <- '...'
 
+knitr::opts_knit$set(root.dir=
+                       '/Users/sunga/Documents/GitHub/floodproject')
+library(terra)
 ```
 
 ```{r}
 ## unsure what the issue is, keeps timing out
-# fldfiname <- "femadata/NFHL_06_20230220.zip"
-# if (!file.exists(fldfiname)){
-# dir.create("femadata")
-#  download.file("https://hazards.fema.gov/nfhlv2/output/State/NFHL_06_20230220.zip",
-#                destfile= fldfiname,mode = "wb")
-#  file <- unzip(list.files("./femadata"), exdir = "./femadata")}
-floodarea <- vect('national_flood_hazard_layer_fema/NFHL_06_20230121.gdb',layer = "S_FLD_HAZ_AR")
-floodbound <- vect('national_flood_hazard_layer_fema/NFHL_06_20230121.gdb',layer = "S_FLD_HAZ_LN")
+fldfiname <- "femadata/NFHL_06_20230220.zip"
+ if (!file.exists(fldfiname)){
+   dir.create("femadata")
+   download.file("https://hazards.fema.gov/nfhlv2/output/State/NFHL_06_20230220.zip",
+                destfile= fldfiname,mode = "wb")
+  file <- unzip(list.files("./femadata"), exdir = "./femadata")
+}
+
+farea <- "floodarea.rds"
+if (!file.exists(farea)) {
+
+# period means setting working directory to the front 
+  floodarea <- vect('./NFHL_06_20230220/NFHL_06_20230220.gdb',layer = "S_FLD_HAZ_AR")
+#floodbound <- vect('./NFHL_06_20230220/NFHL_06_20230220.gdb',layer = "S_FLD_HAZ_LN")
+# crop to Yolo co.
+
+ usa  = geodata::gadm("USA", level=2, path=".")
+  yolo = usa[usa$NAME_2 == "Yolo", ]
+ floodarea = crop(floodarea, yolo)
+  saveRDS(floodarea, farea)
+}
+
+floodarea <- readRDS(farea)
+
 ```
 
 downloading and reading land use data as a SpatVector
 ```{r}
-url2 <- "https://data.cnra.ca.gov/dataset/6c3d65e3-35bb-49e1-a51e-49d5a2cf09a9/resource/1da7b37a-dd97-4b69-a86a-fe824a252eaf/download/i15_crop_mapping_2019.zip"
+
+url2<- "https://data.cnra.ca.gov/dataset/6c3d65e3-35bb-49e1-a51e-49d5a2cf09a9/resource/1da7b37a-dd97-4b69-a86a-fe824a252eaf/download/i15_crop_mapping_2019.zip"
 landname <- "./landdata/i15_Crop_Mapping_2019.zip"
 if (!file.exists(landname)){
 dir.create("landdata")
  download.file(url2,
                destfile= landname,mode = "wb")
-usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip")
-landuse <- vect(usefiles[7])
-} else {usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip")
-landuse <- vect(usefiles[7])}
+    unzip("./landdata/i15_Crop_Mapping_2019.zip")
+#landuse <- vect(usefiles[7])
+} #else {
+
+fland <- "landuse.rds"
+if (!file.exists(fland)) {
+    usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip", list=TRUE)
+    landuse <- vect(usefiles$Name[8])
+    landuse = crop(landuse, yolo)
+    saveRDS(landuse, fland)
+}
+landuse <- readRDS(fland)
+
 ```
 organizing data into urban and agricultural land
 ```{r}
-uses <- landuse$SYMB_CLASS
-cats <- unique(uses)
-agcats <- cats[1:10]
-agind <-  unlist(sapply(agcats,grep,uses,value = 0))
 
+#landuse$agriculture <- landuse$SYMB_CLASS != "U"
+
+# assign agriculture area if the value is not equal to U 
+agind <- landuse$SYMB_CLASS != "U"
 #urbanind<- grep(uses,cats[11],value = 0)
 # replacing the values in the column
-landuse$SYMB_CLASS[agind]<- "agricultural land"
-landuse$SYMB_CLASS[-agind] <- "urban land"
+landuse$landuse <- "urban"
+landuse$landuse[agind]<- "agriculture"
 
-agflood <- intersect(landuse[agind],floodbound)
-# agflood$SYMB_CLASS
-urbflood <- intersect(landuse[-agind],floodbound)
+highcats <- c("A","AE","AH","AO","VE","V")
+modcats <- c("X","A99")
+floodarea <- floodarea[floodarea$FLD_ZONE != "AREA NOT INCLUDED", ]
+floodarea$zones <- "wrong"
+floodarea$zones[floodarea$FLD_ZONE %in% highcats] <- "high risk"
+floodarea$zones[floodarea$FLD_ZONE %in% modcats] <- "mod risk"
+floodarea$zones[floodarea$FLD_ZONE == "D"] <- "low risk"
+#table(floodarea$zones, floodarea$FLD_ZONE)
 
+
+luflood <- intersect(landuse[, "landuse"], floodarea[, "zones"])
+table(luflood$zones, luflood$landuse)
+d = data.frame(luflood)
+library(ggplot2)
+#ggplot(d)
 ```
+
+
+```{r}
+urbflood[, c("SYMB_CLASS")]
+```
+
+
 plotting
 ```{r}
 plot(landuse, main = "CA Agricultural Land in Flood Zones")#, add = TRUE)
 lines(agflood,col = "blue")
 legend("topright",col =c("blue","black"),legend = c("flood zones","agricultural land"))
 ```
+```{r}
+library(ggplot2)
+
+agind <-  unlist(sapply(agcats,grep,uses,value = 0))
+landuse$SYMB_CLASS[agind]<- "agricultural land"
+
+zonetypes <- unique(floodarea$FLD_ZONE)
+highcats <- c("A","AE","AH","AO","VE","V")
+modcats <- c("X","A99")
+floodarea$zones <- "wrong"
+floodarea$zones[floodarea$FLD_ZONE %in% highcats] <- "high risk"
+floodarea$zones[floodarea$FLD_ZONE %in% modcats] <- "mod risk"
+floodarea$zones[floodarea$FLD_ZONE == "D"] <- "low risk"
+table(floodarea$zones)
+fz = aggregate(floodarea, "FLD_ZONE")
+
+nrow()
+
+library(ggplot2)
+
+
+
+# values= 0 gives the index 
+zonind <- unlist(sapply(highcats,grep,zones,value=0))
+undcats <-"D"
+modind <-unlist(sapply(undcats,grep,zones,value=0))
+undind <-unlist(sapply(undcats,grep,zones,value=0))
+
+# assign the categories 
+floodarea$FLD_ZONE[highcats]<-"high risk"
+floodarea$FLD_ZONE[modind] <-"moderate to low risk"
+floodarea$FLD_ZONE[undcats] <-"un"
+
+
+
+
+# total number of zones is 91778
+length(zones)
+
+# fraction of high risk zones per total number of zones 
+
+
+#landuse_d=data.frame(landuse)
+#landuse_e=landuse$SYMB_CLASS
+#flood_a=floodarea$FLD_ZONE
+#m <- merge(landuse, floodarea)
+
+
+
+
+head(urbflood)
+class(urbflood$SYMB_CLASS)
+urbflood_m=data.frame(urbflood)
+urbflood_m=as.matrix(urbflood)
+#make categorical values to order 
+floodarea_f=as.factor(floodarea$FLD_ZONE)
+
+unique(floodarea$FLD_ZONE)
+
+barplot(urbflood$FLD_ZONE)
+# to use ggplot, data has to be tidy 
+ggplot(urbflood,aes(x=urbflood$SYMB_CLASS,fill=urbflood$FLD_ZONE))+
+  geom_col()+
+  labs(x="Continent",y="Distribution of types of plastic in the average pick-up event")+
+  theme_bw()
+```
+
