--- a/esp106-finalproject.Rmd
+++ b/esp106-finalproject.Rmd
@@ -11,82 +11,83 @@ knitr::opts_knit$set(root.dir = "/Volumes/KYRADRIVE/floodproject") # kyra mac wd
 library(terra)
 library(ggplot2)
 library(geodata)
+
 ```
 Creating a function that allows you to put in any county in California and get land use data and national flood hazard layer for that county and save as rds. This allows us to process data for multiple counties much more efficiently. Also, it allows us to save a much smaller (cropped) data set for an individual county rather than having to access both statewide data sets all at once.  
 The function takes in a string of the county's name. If the county exists in California (case insensitive), then it crops both data sets to the specified county and saves each subset data as a RDS. If the county, as inputted, is not in California, the function breaks and returns an error which states that the county does not exist in California.  
 The flood data we have is from FEMA's national flood hazard layer. The land use data is from the California natural resources agency's crop mapping data.  
 If the desired RDS already exists, the function informs the user.  
 ```{r}
- flcounty <- function(countyname) {
-  #if nfhl does not exist in directory, download from fema
-  fldfiname <- "femadata/NFHL_06_20230220.zip"
-  if (!file.exists(fldfiname)){
-    dir.create("femadata")
-    download.file("https://hazards.fema.gov/nfhlv2/output/State/NFHL_06_20230220.zip",
-                  destfile= fldfiname,mode = "wb")
-    file <- unzip(list.files("./femadata"), exdir = "./femadata")
-  }
-  # take input county name as lower for string comparison
-  clname <- tolower(countyname)
-  # create name of rds to be created
-  fldrds <- paste0(clname,"flood.rds")
-  # if rds for nfhl county does not already exist in directory, create and save
-  #checks is county is in california before cropping, also checks for duplicates
-  if (!file.exists(fldrds)) {
-    usa  = geodata::gadm("USA", level=2, path=".")
-    usa = usa[usa$NAME_1=="California"]
-    county_idx <- grep(paste0(clname, collapse="|"), tolower(usa$NAME_2))
-    # stops is county is not in california
-    if (length(county_idx) == 0) {
-      stop(paste(countyname, "county not found in California"))
-    } else if (length(county_idx) > 1) {
-      warning(paste("Multiple matches found for county", countyname))
-    }
-    # subsets to county
-    county <- usa[county_idx, ]  
-    # creating spat vector from nfhl layer
-  floodarea <- terra::vect('./femadata/NFHL_06_20230220/NFHL_06_20230220.gdb',
-                           layer = "S_FLD_HAZ_AR")
+flcounty <- function(countyname) {
+#if nfhl does not exist in directory, download from fema
+fldfiname <- "femadata/NFHL_06_20230220.zip"
+if (!file.exists(fldfiname)){
+dir.create("femadata")
+download.file("https://hazards.fema.gov/nfhlv2/output/State/NFHL_06_20230220.zip",
+destfile= fldfiname,mode = "wb")
+}
+#file <- unzip(fldfiname, exdir = "./femadata")
+# take input county name as lower for string comparison
+clname <- tolower(countyname)
+# create name of rds to be created
+fldrds <- paste0(clname,"flood.rds")
+# if rds for nfhl county does not already exist in directory, create and save
+#checks is county is in california before cropping, also checks for duplicates
+if (!file.exists(fldrds)) {
+usa= geodata::gadm("USA", level=2, path=".")
+usa = usa[usa$NAME_1=="California"]
+county_idx <- grep(paste0(clname, collapse="|"), tolower(usa$NAME_2))
+# stops is county is not in california
+if (length(county_idx) == 0) {
+stop(paste(countyname, "county not found in California"))
+} else if (length(county_idx) > 1) {
+arning(paste("Multiple matches found for county", countyname))
+}
+# subsets to county
+county <- usa[county_idx, ]
+# creating spat vector from nfhl layer
+ floodfiles <-unzip("./femadata/NFHL_06_20230220.zip",exdir="./femadata")
+floodarea <- terra::vect("./femadata/NFHL_06_20230220.gdb",layer = "S_FLD_HAZ_AR")
  
-  #cropping to county and saving to rds
-  floodcounty = terra::crop(floodarea, county)
-  saveRDS(floodcounty, fldrds)
-  print(paste0(fldrds, " saved to directory"))
-  }else{print(paste0(fldrds, " already exists in directory"))}
-  
-  # if land use data does not exist in directory, download from CNRA
-  landname <- "./landdata/i15_Crop_Mapping_2019.zip"
-  if (!file.exists(landname)){
-    dir.create("landdata")
-    url2<- "https://data.cnra.ca.gov/dataset/6c3d65e3-35bb-49e1-a51e-49d5a2cf09a9/resource/1da7b37a-dd97-4b69-a86a-fe824a252eaf/download/i15_crop_mapping_2019.zip"
-    download.file(url2,
-                  destfile= landname,mode = "wb")
-    unzip("./landdata/i15_Crop_Mapping_2019.zip")
-    #landuse <- vect(usefiles[7])
-  } 
-  # create name of rds to be created
-  lu_rds <- paste0(clname,"landu.rds")
-  #if the rds for landuse does not exist for county, crops to county and saves
-  if (!file.exists(lu_rds)) {
-    usa  = geodata::gadm("USA", level=2, path=".")
-    usa = usa[usa$NAME_1=="California"]
-    county_idx <- grep(paste0(clname, collapse="|"), tolower(usa$NAME_2))
-    # stops is county is not in california
-    if (length(county_idx) == 0) {
-      stop(paste(countyname, "county not found in California"))
-    } else if (length(county_idx) > 1) {
-      warning(paste("Multiple matches found for county", countyname))
-    }
-    # subsets to county
-    county <- usa[county_idx, ]  
-    usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip", list=TRUE)
-    landuse <- terra::vect(usefiles$Name[8])
-    lu_county = terra::crop(landuse, county)
-    saveRDS(lu_county, lu_rds)
-    print(paste0(lu_rds, " saved to directory"))
-  }else{print(paste0(lu_rds, " already exists in directory"))}
+#cropping to county and saving to rds
+floodcounty = terra::crop(floodarea, county)
+saveRDS(floodcounty, fldrds)
+print(paste0(fldrds, " saved to directory"))
+}else{print(paste0(fldrds, " already exists in directory"))}
+
+# if land use data does not exist in directory, download from CNRA
+landname <- "./landdata/i15_Crop_Mapping_2019.zip"
+if (!file.exists(landname)){
+dir.create("landdata")
+url2<- "https://data.cnra.ca.gov/dataset/6c3d65e3-35bb-49e1-a51e-49d5a2cf09a9/resource/1da7b37a-dd97-4b69-a86a-fe824a252eaf/download/i15_crop_mapping_2019.zip"
+download.file(url2,destfile= landname,mode = "wb")
+#unzip("./landdata/i15_Crop_Mapping_2019.zip")
+#landuse <- vect(usefiles[7])
+} 
+# create name of rds to be created
+lu_rds <- paste0(clname,"landu.rds")
+#if the rds for landuse does not exist for county, crops to county and saves
+if (!file.exists(lu_rds)) {
+usa= geodata::gadm("USA", level=2, path=".")
+usa = usa[usa$NAME_1=="California"]
+county_idx <- grep(paste0(clname, collapse="|"), tolower(usa$NAME_2))
+# stops is county is not in california
+if (length(county_idx) == 0) {
+stop(paste(countyname, "county not found in California"))
+} else if (length(county_idx) > 1) {
+warning(paste("Multiple matches found for county", countyname))
+}
+# subsets to county
+county <- usa[county_idx, ]
+usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip", list=TRUE)
+landuse <- terra::vect(usefiles$Name[8])
+lu_county = terra::crop(landuse, county)
+saveRDS(lu_county, lu_rds)
+print(paste0(lu_rds, " saved to directory"))
+}else{print(paste0(lu_rds, " already exists in directory"))}
  
  }
+flcounty('yolo')
 
 ```
 Using the created function, we subset data for yolo county and sacramento county.  
@@ -95,13 +96,16 @@ Note that the function saves each landuse file in the format countynamelu.rds an
 flcounty('yolo')
 floodyolo <- readRDS("./yoloflood.rds")
 yololu <- readRDS("./yololandu.rds")
+yololu$COUNTY <- "Yolo"
+
 flcounty('sacramento')
 floodsac <- readRDS("./sacramentoflood.rds")
 saclu <- readRDS("./sacramentolandu.rds")
+saclu$COUNTY <- "Sacramento"
 ```
 Then, we combine the data using rbind() and plot the flood areas in each county.
 ```{r}
-landuse <- rbind(yololu,saclu)
+landuse <- rbind(yololu,saclu) 
 floodarea<- rbind(floodyolo,floodsac)
 plot(landuse, main = "Flood Hazard areas in Sacramento and Yolo County")
 lines(floodarea, col = "blue")
@@ -122,128 +126,35 @@ agind <- landuse$SYMB_CLASS != "U"
 landuse$landuse <- "urban"
 landuse$landuse[agind]<- "agriculture"
 
-highcats <- c("A","AE","AH","AO","VE","V")
-modcats <- c("X","A99")
+
+highcats <- c("A","AE","AH","AO")
+wavecats <- c("VE","V")
+modcats <- c("X")
+lowcats <- c("D","A99")
 floodarea <- floodarea[floodarea$FLD_ZONE != "AREA NOT INCLUDED", ]
 floodarea$zones <- "wrong"
 floodarea$zones[floodarea$FLD_ZONE %in% highcats] <- "high risk"
 floodarea$zones[floodarea$FLD_ZONE %in% modcats] <- "mod risk"
-floodarea$zones[floodarea$FLD_ZONE == "D"] <- "low risk"
+floodarea$zones[floodarea$FLD_ZONE %in% wavecats] <- "high risk-wave action"
+floodarea$zones[floodarea$FLD_ZONE %in% lowcats] <- "low risk"
 #table(floodarea$zones, floodarea$FLD_ZONE)
 
 
-luflood <- intersect(landuse[, "landuse"], floodarea[, "zones"])
+luflood <- intersect(landuse, floodarea)
 table(luflood$zones, luflood$landuse)   
 d = data.frame(luflood)
-plot(luflood[luflood$landuse=="agriculture"])
-plot(luflood[luflood$landuse=="urban"])
+# plot(luflood[luflood$landuse=="agriculture"])
+# plot(luflood[luflood$landuse=="urban"])
 #ggplot(d)
-```
+ tyolo = table(luflood$zones, luflood$landuse)
 
+barplot(tyolo)
 
-```{r}
+heh <-data.frame(luflood$zones, luflood$landuse)
 
-#landuse$agriculture <- landuse$SYMB_CLASS != "U"
-
-# assign agriculture area if the value is not equal to U 
-agind <- landuse$SYMB_CLASS != "U" 
-#urbanind<- grep(uses,cats[11],value = 0)
-# replacing the values in the column
-landuse$landuse <- "urban"
-landuse$landuse[agind]<- "agriculture"
-
-highcats <- c("A","AE","AH","AO","VE","V")
-modcats <- c("X","A99")
-floodarea <- floodarea[floodarea$FLD_ZONE != "AREA NOT INCLUDED", ]
-floodarea$zones <- "wrong"
-floodarea$zones[floodarea$FLD_ZONE %in% highcats] <- "high risk"
-floodarea$zones[floodarea$FLD_ZONE %in% modcats] <- "mod risk"
-floodarea$zones[floodarea$FLD_ZONE == "D"] <- "low risk"
-#table(floodarea$zones, floodarea$FLD_ZONE)
-
-
-luflood <- intersect(landuse[, "landuse"], floodarea[, "zones"])
-table(luflood$zones, luflood$landuse)
-d = data.frame(luflood)
-plot(luflood[luflood$landuse=="agriculture"])
-plot(luflood[luflood$landuse=="agriculture"])
-```
-
-
-```{r}
-#urbflood[, c("SYMB_CLASS")]
-
-```
-
-
-plotting
-```{r}
-plot(landuse, main = "Yolo County Agricultural Land in Flood Zones")#, add = TRUE)
-lines(agflood,col = "blue")
-legend("topright",col =c("blue","black"),legend = c("flood zones","agricultural land"))
-```
-```{r}
-library(ggplot2)
-
-# agind <-  unlist(sapply(agcats,grep,uses,value = 0))
-# landuse$SYMB_CLASS[agind]<- "agricultural land"
-# 
-# zonetypes <- unique(floodarea$FLD_ZONE)
-# highcats <- c("A","AE","AH","AO","VE","V")
-# modcats <- c("X","A99")
-# floodarea$zones <- "wrong"
-# floodarea$zones[floodarea$FLD_ZONE %in% highcats] <- "high risk"
-# floodarea$zones[floodarea$FLD_ZONE %in% modcats] <- "mod risk"
-# floodarea$zones[floodarea$FLD_ZONE == "D"] <- "low risk"
-# table(floodarea$zones)
-# fz = aggregate(floodarea, "FLD_ZONE")
-
-
-
-
-# values= 0 gives the index 
-zonind <- unlist(sapply(highcats,grep,zones,value=0))
-undcats <-"D"
-modind <-unlist(sapply(undcats,grep,zones,value=0))
-undind <-unlist(sapply(undcats,grep,zones,value=0))
-
-# assign the categories 
-floodarea$FLD_ZONE[highcats]<-"high risk"
-floodarea$FLD_ZONE[modind] <-"moderate to low risk"
-floodarea$FLD_ZONE[undcats] <-"un"
-
-
-
-
-# total number of zones is 91778
-length(zones)
-
-# fraction of high risk zones per total number of zones 
-
-
-#landuse_d=data.frame(landuse)
-#landuse_e=landuse$SYMB_CLASS
-#flood_a=floodarea$FLD_ZONE
-#m <- merge(landuse, floodarea)
-
-
-
-
-head(urbflood)
-class(urbflood$SYMB_CLASS)
-urbflood_m=data.frame(urbflood)
-urbflood_m=as.matrix(urbflood)
-#make categorical values to order 
-floodarea_f=as.factor(floodarea$FLD_ZONE)
-
-unique(floodarea$FLD_ZONE)
-
-barplot(urbflood$FLD_ZONE)
-# to use ggplot, data has to be tidy 
-ggplot(urbflood,aes(x=urbflood$SYMB_CLASS,fill=urbflood$FLD_ZONE))+
-  geom_col()+
-  labs(x="Continent",y="Distribution of types of plastic in the average pick-up event")+
-  theme_bw()
+names(heh)<- c("risk","lu")
+ggplot(data = heh,aes(x = lu,y=risk,fill=risk))+
+  geom_bar(position = "stack",stat = "identity")
 ```
 
 
