--- a/esp106-finalproject.Rmd
+++ b/esp106-finalproject.Rmd
@@ -1,13 +1,19 @@
 ---
+title: "floodproject"
+output: html_document
+date: '2023-03-10'
+---
+---
 title: "ESP 106 Final Project"
 output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
+
 knitr::opts_chunk$set(echo = TRUE)
 
-# knitr::opts_knit$set(root.dir= '/Users/sunga/Documents/GitHub/floodproject') # sung wd
-knitr::opts_knit$set(root.dir = "/Volumes/KYRADRIVE/floodproject") # kyra mac wd
+knitr::opts_knit$set(root.dir= "C:/Users/Ucchong/Desktop/New folder/floodproject") # sung wd
+#knitr::opts_knit$set(root.dir = "/Volumes/KYRADRIVE/floodproject") # kyra mac wd
 library(terra)
 library(ggplot2)
 library(geodata)
@@ -79,8 +85,8 @@ warning(paste("Multiple matches found for county", countyname))
 }
 # subsets to county
 county <- usa[county_idx, ]
-usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip", list=TRUE)
-landuse <- terra::vect(usefiles$Name[8])
+usefiles <-unzip("./landdata/i15_Crop_Mapping_2019.zip", exdir= "./landdata")
+landuse <- terra::vect(paste0("./landdata/i15_Crop_Mapping_2019/i15_Crop_Mapping_2019.shp"))
 lu_county = terra::crop(landuse, county)
 saveRDS(lu_county, lu_rds)
 print(paste0(lu_rds, " saved to directory"))
@@ -156,5 +162,4 @@ names(heh)<- c("risk","lu")
 ggplot(data = heh,aes(x = lu,y=risk,fill=risk))+
   geom_bar(position = "stack",stat = "identity")
 ```
-
 
